--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,13 +9,14 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/geolocator/2.1.0/geolocator.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/fontawesome/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Sans|Open+Sans" rel="stylesheet">
 </head>
 <body>
 	<header class='Header'>
 		<nav class='Header__nav'>
 			<ul class='Header__list'>
 				<li class="Header__item">
-					<a href="/foo" class="Header__link">Test</a>
+					<a href="/dashboard" class="Header__link">Dashboard</a>
 				</li>
 				<% if (!locals.user) { %>
 				<li class="Header__item">
