--- a/views/partials/settings.ejs
+++ b/views/partials/settings.ejs
@@ -2,7 +2,7 @@
 	<h3 class="Settings__title">Account Settings</h3>
 	<div class="Settings__container">
 		<div class="Settings__entry">
-			<div class="Settings__label">Gender and sexual orientation</div>
+			<div class="Settings__label">Sexual orientation</div>
 			<div class="Settings__body">
 				<div class="Settings__actions">
 					<button type="submit" class="Settings__button Location__submit">Save</button>
