--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/geolocator/2.1.0/geolocator.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/fontawesome/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Fira+Sans|Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Sans|Open+Sans|Montserrat" rel="stylesheet">
 </head>
 <body>
 	<header class='Header'>
